@@ -1,6 +1,7 @@
 package com.eleks.academy.pharmagator.controllers;
 
 import com.eleks.academy.pharmagator.dataproviders.dto.input.PharmacyDto;
+import com.eleks.academy.pharmagator.exceptions.InvalidIdentifierException;
 import com.eleks.academy.pharmagator.services.PharmacyService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -9,7 +10,6 @@ import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,14 +23,14 @@ public class PharmacyController {
     public List<PharmacyDto> getAll() {
         return pharmacyService.findAll().stream()
                 .map(pharmacy -> modelMapper.map(pharmacy, PharmacyDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id:[\\d]+}")
     public ResponseEntity<PharmacyDto> getById(@PathVariable Long id) {
         return pharmacyService.findById(id)
                 .map(pharmacy -> ResponseEntity.ok(modelMapper.map(pharmacy, PharmacyDto.class)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+                .orElseThrow(() -> new InvalidIdentifierException(id));
     }
 
     @PostMapping
@@ -45,11 +45,11 @@ public class PharmacyController {
 
         return pharmacyService.update(id, pharmacyDto)
                 .map(pharmacy -> ResponseEntity.ok(modelMapper.map(pharmacy, PharmacyDto.class)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+                .orElseThrow(() -> new InvalidIdentifierException(id));
     }
 
     @DeleteMapping("/{id:[\\d]+}")
-    public ResponseEntity<?> delete(@PathVariable Long id) {
+    public ResponseEntity<PharmacyDto> delete(@PathVariable Long id) {
         pharmacyService.deleteById(id);
         return ResponseEntity.noContent().build();
     }
