@@ -1,6 +1,7 @@
 package com.eleks.academy.pharmagator.controllers;
 
 import com.eleks.academy.pharmagator.dataproviders.dto.input.PriceDto;
+import com.eleks.academy.pharmagator.exceptions.InvalidIdentifierException;
 import com.eleks.academy.pharmagator.services.PriceService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -9,7 +10,6 @@ import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/prices")
@@ -23,7 +23,7 @@ public class PriceController {
     public List<PriceDto> getAll() {
         return priceService.findAll().stream()
                 .map(price -> modelMapper.map(price, PriceDto.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/pharmacyId/{pharmacyId:[\\d]+}/medicineId/{medicineId:[\\d]+}")
@@ -33,7 +33,7 @@ public class PriceController {
 
         return priceService.findById(pharmacyId, medicineId)
                 .map(price -> ResponseEntity.ok(modelMapper.map(price, PriceDto.class)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+                .orElseThrow(() -> new InvalidIdentifierException(pharmacyId, medicineId));
     }
 
     @PutMapping("/pharmacyId/{pharmacyId:[\\d]+}/medicineId/{medicineId:[\\d]+}")
@@ -44,11 +44,11 @@ public class PriceController {
 
         return priceService.update(pharmacyId, medicineId, priceDto)
                 .map(price -> ResponseEntity.ok(modelMapper.map(price, PriceDto.class)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+                .orElseThrow(() -> new InvalidIdentifierException(pharmacyId, medicineId));
     }
 
     @DeleteMapping("/pharmacyId/{pharmacyId:[\\d]+}/medicineId/{medicineId:[\\d]+}")
-    public ResponseEntity<?> delete(
+    public ResponseEntity<PriceDto> delete(
             @PathVariable Long pharmacyId,
             @PathVariable Long medicineId) {
 
